--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Java Task</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
  
     <div id="div1">
     <h1 id="result">Java Task</h1>
     <input  type="text" id="input" placeholder="Enter the number"> 
     <button onclick="addInput()" id="btn">Add</button>
-    <div id="div2"></div>
 </div>
+<div id="div2"></div>
 <div id="div3">
     <table>
         <thead>
